--- a/primitive-calculator.html
+++ b/primitive-calculator.html
@@ -5,7 +5,7 @@
         
     </head>
     <body class="bg-gray-200 ">
-        <h1>Calculator</h1>
+        <h1>Primitive Calculator</h1>
         <p>
             <button onclick="
                 calculation += '1';   
